# AdvancedRayTracer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  test.srctrlprj
Remise/doc/: README.txt
doc/: document_design.docx
lib/: CMakeLists.txt
lib/public/: globals.h
lib/public/controllers/: CameraController.hpp  DrawToolbar2DController.hpp  DrawToolbar3DController.hpp  LeftSidebarController.hpp  MainController.hpp  MenuController.hpp  RendererController.hpp  RightSidebarController.hpp  SidebarController.hpp  ToolbarController.hpp  main-controller.hpp  menu-controller.hpp
lib/public/logic/: Cube.hpp  Entity.hpp  FbItem.hpp  FbItemRenderer.hpp  Module.hpp  RenderObject.hpp  Scene.hpp  Scene3D.hpp  Transform3D.hpp  Vertex.hpp
lib/public/logic/2D/: Circle.hpp  Image.hpp  Line.hpp  PaintedItem.hpp  Polygon.hpp  Rectangle.hpp  Scene2D.hpp  Shape2D.hpp  Triangle.hpp
lib/public/logic/2D/modules/: Brush.hpp  Color.hpp  Pen.hpp  Transform2D.hpp  ZIndex.hpp
lib/public/logic/3D/: Cuboid.hpp  Geometry.hpp  Global3D.hpp  LightEntity.hpp  Object3D.hpp  Plane.hpp  Render.hpp  RenderItem.hpp  RootEntity.hpp  Scene3D.hpp  SceneLoader.hpp  Shape3D.hpp  Sphere.hpp  Square.hpp  Torus.hpp
lib/public/logic/3D/modules/: Light.hpp  LightPicker.hpp  Material.hpp  MaterialPicker.hpp  Mesh.hpp  SphereMesh.hpp  Transform.hpp  Transform3D.hpp
lib/public/logic/3D/modules/lights/: DirectionalLight.hpp  PointLight.hpp  SpotLight.hpp
lib/public/logic/3D/modules/materials/: MetalRoughMaterial.hpp  PhongAlphaMaterial.hpp  PhongMaterial.hpp  WireframeMaterial.hpp
lib/public/logic/3D/modules/meshes/: ConeMesh.hpp  CuboidMesh.hpp  PlaneMesh.hpp  SphereMesh.hpp  TorusMesh.hpp
lib/public/models/: Camera.hpp  LeftSidebarModel.hpp  MaterialModel.hpp  MenuModel.hpp  Outliner.hpp  RendererModel.hpp  RightSidebarModel.hpp  SidebarModel.hpp  ToolbarModel.hpp  menu-model.hpp
lib/src/controllers/: DrawToolbar2DController.cpp  DrawToolbar3DController.cpp  LeftSidebarController.cpp  MainController.cpp  MenuController.cpp  RendererController.cpp  RightSidebarController.cpp  SidebarController.cpp  ToolbarController.cpp  main-controller.cpp  menu-controller.cpp
lib/src/logic/: Cube.cpp  Entity.cpp  Entity3D.cpp  FbItem.cpp  FbItemRenderer.cpp  Scene3D.cpp  Transform3D.cpp
lib/src/logic/2D/: Circle.cpp  Image.cpp  Line.cpp  PaintedItem.cpp  Polygon.cpp  Rectangle.cpp  Scene2D.cpp  Shape2D.cpp  Triangle.cpp
lib/src/logic/2D/modules/: Brush.cpp  Pen.cpp  Transform2D.cpp  ZIndex.cpp
lib/src/logic/3D/: Cuboid.cpp  LightEntity.cpp  Object3D.cpp  RenderItem.cpp  RootEntity.cpp  Scene3D.1.cpp  Scene3D.cpp  SceneLoader.cpp  Shape3D.cpp  Sphere.cpp  Square.cpp  Torus.cpp
lib/src/logic/3D/modules/: Light.cpp  LightPicker.cpp  Material.cpp  MaterialPicker.cpp  Mesh.cpp  SphereMesh.cpp  TorusMesh.cpp  Transform3D.cpp
lib/src/logic/3D/modules/lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
lib/src/logic/3D/modules/materials/: MetalRoughMaterial.cpp  PhongAlphaMaterial.cpp  PhongMaterial.cpp  WireframeMaterial.cpp
lib/src/logic/3D/modules/meshes/: ConeMesh.cpp  CuboidMesh.cpp  PlaneMesh.cpp  SphereMesh.cpp  TorusMesh.cpp
lib/src/models/: LeftSidebarModel.cpp  MenuModel.cpp  Outliner.cpp  RendererModel.cpp  RightSidebarModel.cpp  SidebarModel.cpp  ToolbarModel.cpp  menu-model.cpp
lib/tests/: CMakeLists.txt
lib/tests/src/: main.cpp  test-runner.cpp  test-runner.hpp
ui-qml/: CMakeLists.txt  qtquickcontrols2.conf  resources.qrc
ui-qml/components/: BrushModuleComponent.qml  CuboidMeshModuleComponent.qml  DirectionalLightModuleComponent.qml  DrawToolbar2DComponent.qml  DrawToolbar3DComponent.qml  FbItemComponent.qml  LightPickerModuleComponent.qml  MaterialModuleComponent.qml  MaterialPickerModuleComponent.qml  MenuComponent.qml  MetalRoughMaterialModuleComponent.qml  MultiViewCamera.qml  Outliner.qml  PenModuleComponent.qml  PhongAlphaMaterialModuleComponent.qml  PhongMaterialModuleComponent.qml  PlaneMeshModuleComponent.qml  PointLightModuleComponent.qml  RendererComponent.qml  RightSidebarComponent.qml  Scene2DComponent.qml  Scene3DComponent.qml  SidebarComponent.qml  SingleViewCamera.qml  SphereMeshModuleComponent.qml  SpotLightModuleComponent.qml  ToolbarComponent.qml  TorusMeshModuleComponent.qml  Transform2DModuleComponent.qml  Transform3DModuleComponent.qml  WireframeMaterialModuleComponent.qml  WireframeModuleComponent.qml  ZIndexModuleComponent.qml  components.qrc  qmldir
ui-qml/fonts/: fonts.qrc
ui-qml/shaders/: robustwireframe.frag  shaders.qrc  test.frag  test.vert
ui-qml/skybox/: skybox-osx.qrc  skybox.qrc
ui-qml/src/: Outliner.cpp  Outliner.hpp  QmlOutliner.cpp  QmlOutliner.hpp  main.cpp
ui-qml/styles/: CustomButton.qml  CustomDoubleInput.qml  CustomIntInput.qml  CustomText.qml  Style.qml  ToolbarButton.qml  UiMainBorder.qml  styles.qrc
ui-qml/views/: MainView.qml  RenderView.qml  views.qrc
